--- a/ReadMe
+++ b/ReadMe
@@ -6,7 +6,9 @@ mvn clean install
 4. Run the project using maven spring boot command
 mvn spring-boot:run
 5. Use below Restful sample requests to run and test the services
-
+Basic Auth 
+Username: test
+Password: password123
 a) http://localhost:8080/api/parkingLots
 {"name":"parking1",
 "capacity":"100"}	
